fixing whitespace above hero on home page

--- a/css/style.css
+++ b/css/style.css
@@ -13130,6 +13130,10 @@ main#content .c-csc-hero .home-info-overlay .text-formatted h2, main#content .c-
   letter-spacing: 0.05rem;
 }
 
+#main-wrapper {
+  margin-top: -1rem;
+}
+
 .block-system-breadcrumb-block {
   display: none;
 }
