--- a/scss/csc-structure.scss
+++ b/scss/csc-structure.scss
@@ -24,6 +24,10 @@
 
 } // End #header
 
+#main-wrapper {
+  margin-top: -1rem; // There is whitespace before the hero. Not sure where it is coming from.
+}
+
 // Breadcrumbs (hiding for now)
 .block-system-breadcrumb-block {
   display: none;
